# next-dm

./: README.md  design.md  index.html  mvp.md  package-lock.json  package.json  tsconfig.tsbuildinfo
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_queue_paused.sql  003_task_archived.sql  004_video_settings.sql
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: mod.rs  preflight.rs  queues.rs  settings.rs  tasks.rs  video.rs
src-tauri/src/db/: chunks.rs  mod.rs  queues.rs  schema.rs  settings.rs  tasks.rs
src-tauri/src/engine/: chunk_manager.rs  governor.rs  mod.rs  stitcher.rs  video_downloader.rs  worker_pool.rs
src-tauri/src/services/: binary_manager.rs  clipboard.rs  events.rs  mod.rs
src/components/layout/: ArchiveView.tsx  Sidebar.tsx  SpeedHUD.tsx  TaskStage.tsx  TitleBar.tsx
src/components/modals/: PreFlightModal.tsx  VideoPreFlightModal.tsx
src/components/notifications/: ClipboardToast.tsx
src/components/settings/: SettingsView.tsx  SpeedLimiter.tsx  ThemeSwitcher.tsx
src/components/shared/: FolderPicker.tsx  PatternInput.tsx  TagInput.tsx
src/components/sidebar/: QueueContextMenu.tsx  QueueItem.tsx  QueueList.tsx
src/components/tasks/: AddUrlBar.tsx  FilterBar.tsx  TaskList.tsx  (+1 more)
src/hooks/: useDownloadEvents.ts  useTauriCommand.ts  useTauriEvents.ts
src/lib/: constants.ts  fileIcons.tsx  formatters.ts  naming.ts  platformDetect.ts
src/stores/: queuesStore.ts  settingsStore.ts  tasksStore.ts
src/styles/: globals.css  theme.css
